--- a/styles/home.css
+++ b/styles/home.css
@@ -2,13 +2,18 @@
     --color-comun: #005dab;
   }
 
-body{ font-family: "Open Sans", sans-serif !important; }
+body{ 
+    font-family: "Open Sans", sans-serif;
+}
 
 nav { 
     height: 50px;
     padding-top: 2px;
 }
 button{
+    color: white;
+}
+a{
     color: white;
 }
 
@@ -43,7 +48,8 @@ button{
     height: 48px;
     border: none;
     border-left: 1px solid #243540;
-    padding: 0px 12px 0px 12px;
+    padding: 0px 15px 0px 15px;
+    font-size: 14px;
 }
 
 .shoppin-cart{
@@ -58,6 +64,15 @@ button{
     height: 15px;
     width: 15px;
     padding: 2px !important;
+}
+
+.search-section{
+    background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.3), transparent), url(/img/background-1.jpg);
+    padding: 30px 0px 30px 0px;
+}
+
+.search-bar{
+    margin:  10px 0px 0px 0px;
 }
 
 
