--- a/styles/home.css
+++ b/styles/home.css
@@ -1,5 +1,7 @@
 :root {
     --color-comun: #005dab;
+    --color-nav-foot: rgb(34, 34, 34);
+    --hover-button: #0f76d0
   }
 
 body{ 
@@ -18,7 +20,10 @@ a{
 }
 
 .bluecolor{
-    background-color: var(--color-comun);;
+    background-color: var(--color-comun) !important;
+}
+.darkcolor{
+    background-color: var(--color-nav-foot);
 }
 
 .container{
@@ -70,12 +75,117 @@ a{
     background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.3), transparent), url(/img/background-1.jpg);
     padding: 30px 0px 30px 0px;
 }
-
+.search-section-title{
+    padding: 12px 10px 12px 0px;
+    font-size: 28px;
+    font-weight: 700;
+    text-decoration: none;
+}
 .search-bar{
-    margin:  10px 0px 0px 0px;
+    margin:  20px 0px 0px 0px;
+    
 }
 
 
 .second-navbar-button{
-    background-color: transparent;
+    height: 48px;
+    border: none;
+    padding: 10px 28px ;
+    font-size: 15px;
+}
+.second-navbar-button:hover{
+    height: 48px;
+    border: none;
+    padding: 10px 28px ;
+    font-size: 15px;
+    background-color: var(--hover-button);
+}
+
+
+.apply-section{
+    background-image: linear-gradient(to right, #243540, rgba(0, 0, 0, 0) 73%), url(/img/banner.jpg);
+    height: 430px;
+    background-size: auto, cover;
+    background-position: 0 0, 100%;
+    background-repeat: repeat, no-repeat;
+}
+
+.apply-section-content{
+    margin: 100px 100px;
+    color: white;
+}
+.apply-section-content{
+    margin: 90px 100px;
+    color: white;
+}
+
+.apply-title{ font-size: 40px;}
+.apply-subtitle{ font-size: 22px;}
+.apply-paragraph{ font-size: 14px;}
+
+.apply-button{
+    background-color: var(--color-comun);
+    border: 1px solid rgb(50, 50, 209);
+    border-radius: 5px;
+    padding: 12px 25px;
+    font-size: 14px;
+}
+
+.apply-button:hover{
+    top: 5px;
+    left: 5px;
+    transition: 0.2s;
+    background-color: var(--hover-button);
+    box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 10px;
+    z-index: 5;
+}
+
+.overview-section{
+    margin: 55px 0px 0px 0px;
+    padding: 10px 20px 0px 0px;
+    width: 50%;
+}
+
+.overview-section p{
+    font-size: 14px;
+    padding-top: 10px;
+    line-height: 23px;
+}
+
+.overview-section h2{
+    font-size: 35px;
+    font-weight: 700;
+    font-weight: bold;
+}
+
+.information-section{
+    margin: 55px 0px 0px 0px;
+    padding: 10px 20px 25px 20px;
+    background-color: #243540;
+    border-radius: 15px;
+    /* width: 50%; */
+}
+
+.information-section h3{
+    text-align: center;
+    padding: 20px 0px 5px 0px;
+    font-size: 25px;
+    font-weight: 300;
+    color: #9acdfe;
+}
+.information-section h5{
+    text-align: center;
+    padding: 10px 0px 15px 0px;
+    font-size: 20px;
+    font-weight: 600;
+    color: white;
+}
+.border-bottom{ border-bottom: 1px solid #9acdfe;}
+.information-section-point div{
+    padding-top: 15px;
+    color: white;
+}
+.information-section-point-psize{
+    font-size: 14px;
 }
