--- a/styles/home.css
+++ b/styles/home.css
@@ -119,17 +119,14 @@ a {
     height: 48px;
     border: none;
     padding: 10px 28px;
-    font-size: 15px;
 }
 
 .second-navbar-button:hover {
     height: 48px;
     border: none;
     padding: 10px 28px;
-    font-size: 15px;
     background-color: var(--hover-button);
 }
-
 
 .apply-section {
     background-image: linear-gradient(to right, #243540, rgba(0, 0, 0, 0) 73%), url(/img/banner.jpg);
@@ -177,20 +174,16 @@ a {
 }
 
 .overview-section {
-    margin: 55px 0px 0px 0px;
+    margin: 55px 0px 0px 30px;
     padding: 10px 20px 0px 0px;
-    /* width: 50%; */
+    width: 50%;
 }
 
 .overview-section p {
-    font-size: 14px;
     padding-top: 10px;
-    line-height: 23px;
 }
 
 .overview-section h2 {
-    font-size: 35px;
-    font-weight: 700;
     font-weight: bold;
 }
 
@@ -199,7 +192,7 @@ a {
     padding: 10px 20px 25px 20px;
     background-color: #243540;
     border-radius: 15px;
-    /* width: 50%; */
+    width: 600px;
 }
 
 .information-section h3 {
@@ -287,6 +280,11 @@ span {
     font-weight: 700;
 }
 
+.font-15-400{
+    font-size: 15px;
+    font-weight: 400;
+}
+
 .font-14-400 {
     font-size: 14px;
     font-weight: 400;
@@ -312,6 +310,12 @@ span {
     font-size: 28px;
     font-weight: 700;
     line-height: 33px;
+}
+
+.font-35-700{
+    font-size: 35px;
+    font-weight: 700;
+    line-height: 38px;
 }
 
 .m {
